--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,4 +1,7 @@
 ---
+closures-in-java-ruby-and-duby:
+  title: Closures in Java, Ruby, and Duby
+  created_at: 2010-02-05 23:26:57
 ipad-falling-short-of-the-past:
   title: iPad: Falling Short of the Past
   created_at: 2010-01-30 09:51:51
