--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,4 +1,10 @@
 ---
+memory-and-ruby-symbols:
+  title: Memory and Ruby :symbols
+  created_at: 2010-03-01 21:32:32
+disabling-flash-in-chrome:
+  title: Disabling Flash in Chrome, and Other Tricks
+  created_at: 2010-02-25 20:48:12
 closures-in-java-ruby-and-duby:
   title: Closures in Java, Ruby, and Duby
   created_at: 2010-02-05 23:26:57
