--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,22 +1,28 @@
 ---
+android-impressions:
+  title: Android Impressions
+  created_at: 2010-04-13 00:30:36.0
+iphone-toilet-debacle-redux-backlight:
+  title: iPhone Toilet Debacle Redux: The Backlight
+  created_at: 2010-03-29 13:43:21.0
 memory-and-ruby-symbols:
   title: Memory and Ruby :symbols
-  created_at: 2010-03-01 21:32:32
+  created_at: 2010-03-01 21:32:32.0
 disabling-flash-in-chrome:
   title: Disabling Flash in Chrome, and Other Tricks
-  created_at: 2010-02-25 20:48:12
+  created_at: 2010-02-25 20:48:12.0
 closures-in-java-ruby-and-duby:
   title: Closures in Java, Ruby, and Duby
-  created_at: 2010-02-05 23:26:57
+  created_at: 2010-02-05 23:26:57.0
 ipad-falling-short-of-the-past:
   title: iPad: Falling Short of the Past
-  created_at: 2010-01-30 09:51:51
+  created_at: 2010-01-30 09:51:51.0
 updating-gems-for-ruby-1-9:
   title: Updating gems for Ruby 1.9
-  created_at: 2010-01-27 06:41:33
+  created_at: 2010-01-27 06:41:33.0
 solving-cryptograms-in-clojure:
   title: Solving cryptograms in Clojure
-  created_at: 2009-12-31 10:33:07
+  created_at: 2009-12-31 10:33:07.0
 baby:
   title: Oh, by the way: Baby!
   created_at: 2008-08-14 11:09:00.0
