--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,3 +1,15 @@
+- url: this-weeks-links-2010-06-18
+  title: This Week's Links
+  created_at: "2010-06-18 09:27:15.0"
+- url: cleaning-up-with-some-shell-commands
+  title: Cleaning up with Some Shell Commands
+  created_at: "2010-06-08 11:25:13.0"
+- url: amazon-mp3-downloader-on-64-bit-ubuntu-lucid-lynx
+  title: Amazon MP3 Downloader on 64-bit Ubuntu (Lucid Lynx)
+  created_at: "2010-06-04 12:55:37.0"
+- url: the-birth-of-ivo-clark-ribera
+  title: The Birth of Ivo Clark Ribera
+  created_at: "2010-05-31 22:06:33.0"
 - url: encoding-ipad-video-from-linux
   title: "Encoding iPad Video from Linux"
   created_at: "2010-05-04 22:59:55.0"
