--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,3 +1,6 @@
+- url: reinvent-the-wheel
+  title: Reinvent the Wheel
+  created_at: "2010-08-14 15:19:29.0"
 - url: this-weeks-links-2010-06-18
   title: This Week's Links
   created_at: "2010-06-18 09:27:15.0"
