--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,3 +1,6 @@
+- url: bulk-loading-associations-with-active-record
+  title: Bulk-loading associations with ActiveRecord
+  created_at: "2010-09-13-10:55:22.0"
 - url: reinvent-the-wheel
   title: Reinvent the Wheel
   created_at: "2010-08-14 15:19:29.0"
