--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,6 +1,24 @@
+- url: rails2-upgrade-turbulence
+  title: "Rails 2 Upgrade Turbulence: a Series"
+  created_at: "2010-11-21 07:39:56.7"
+- url: rails2-upgrade-troubleshooting-a-slow-production-deployment
+  title: "Troubleshooting a Slow Production Deployment"
+  created_at: "2010-10-21 06:55:09.0"
+- url: rails2-upgrade-git-svn-workflow-warts
+  title: "git-svn Workflow Warts"
+  created_at: "2010-10-21 06:23:23.0"
+- url: rails2-upgrade-activerecord-woes
+  title: "ActiveRecord Woes"
+  created_at: "2010-10-21 06:02:13.0"
+- url: rails2-upgrade-disabling-sessions
+  title: "Disabling Sessions"
+  created_at: "2010-10-21 05:45:55.0"
+- url: rails2-upgrade-general-cleanup
+  title: "General Cleanup"
+  created_at: "2010-10-21 05:31:37.0"
 - url: bulk-loading-associations-with-active-record
   title: Bulk-loading associations with ActiveRecord
-  created_at: "2010-09-13-10:55:22.0"
+  created_at: "2010-09-13 10:55:22.0"
 - url: reinvent-the-wheel
   title: Reinvent the Wheel
   created_at: "2010-08-14 15:19:29.0"
