--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,6 +1,9 @@
+- url: facebook-connect-ie-fb_xd_fragment-iframe
+  title: "Facebook Connect, IE, and the Mysterious IFrame"
+  created_at: "2010-11-16 22:36:45.0"
 - url: rails2-upgrade-turbulence
   title: "Rails 2 Upgrade Turbulence: a Series"
-  created_at: "2010-11-21 07:39:56.7"
+  created_at: "2010-10-21 07:39:56.7"
 - url: rails2-upgrade-troubleshooting-a-slow-production-deployment
   title: "Troubleshooting a Slow Production Deployment"
   created_at: "2010-10-21 06:55:09.0"
