--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 classes/*
 lib/*
 public/index.html
-public/blog/atom.xml
+public/blog/*.xml
 public/blog/sitemap.*
 public/blog/*/*.html
 public/blog/*/*.md5sum
