--- a/public/blog/posts.yaml
+++ b/public/blog/posts.yaml
@@ -1,3 +1,6 @@
+- url: stirlings-approximation-formula-clojure
+  title: "Stirling's approximation in Clojure"
+  created_at: "2010-11-24 24:12:38.0"
 - url: facebook-connect-ie-fb_xd_fragment-iframe
   title: "Facebook Connect, IE, and the Mysterious IFrame"
   created_at: "2010-11-16 22:36:45.0"
